<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDiaryEntryMenuActivity"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/edit_diary_entry_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/edit_diary_entry_menu_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_diary_entry_menu_button_information"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/edit_diary_entry_menu_information"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_diary_entry_menu_title" />

    <Button
        android:id="@+id/edit_diary_entry_menu_button_pupil_comments"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/edit_diary_entry_menu_pupil_comments"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_diary_entry_menu_button_information" />

    <Button
        android:id="@+id/edit_diary_entry_menu_button_parent_comments"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_diary_entry_menu_parent_comments"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_diary_entry_menu_button_pupil_comments" />

    <Button
        android:id="@+id/edit_diary_entry_menu_button_teacher_comments"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_diary_entry_menu_teacher_comments"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_diary_entry_menu_button_parent_comments" />

    <ImageButton
        android:id="@+id/edit_diary_entry_menu_navigation_button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/home_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/edit_diary_entry_menu_navigation_button_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/reading_history_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_diary_entry_menu_navigation_button_home"
        app:srcCompat="@drawable/list_icon"
        app:tint="@color/blue" />

    <ImageButton
        android:id="@+id/edit_diary_entry_menu_navigation_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/new_diary_entry_information_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_diary_entry_menu_navigation_button_history"
        app:srcCompat="@drawable/add_icon" />

    <ImageButton
        android:id="@+id/edit_diary_entry_menu_navigation_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/settings_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_diary_entry_menu_navigation_button_add"
        app:srcCompat="@drawable/settings_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>